[NNO-12346] NNO-12345 Не отправляются записи мульти модели, если <invoke> в <if> или <else>